modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/variable_conflicts_constant.gd
func test():
	const TEST = 25
	var TEST = 50
